--- a/python/assets/css/style.css
+++ b/python/assets/css/style.css
@@ -1,55 +1,64 @@
 :root {
-    --main-color-0: #336b9c;
-    --main-color-1: #ffd948;
+    --color-sub: #336b9c;
+    --color-main: #ffd948;
 }
 
 @font-face {
-  font-family: 'roboto-regular';
+  font-family: 'font-regular';
   src: url('../fonts/ROBOTO-REGULAR_0.TTF');
   font-display: swap;
 }
 @font-face {
-  font-family: 'roboto-bold';
+  font-family: 'font-bold';
   src: url('../fonts/ROBOTO-BOLD_0.TTF');
   font-display: swap;
 }
 @font-face {
-  font-family: 'roboto-italic';
+  font-family: 'font-italic';
   src: url('../fonts/ROBOTO-ITALIC.TTF');
   font-display: swap;
 }
 
 * {
-	font-family: 'roboto-regular';
-}
-
-body {
-	background: url('../img/Layer_63-min.png') no-repeat center center fixed;
-	background-size: cover;
-	background-color: #000;
+	font-family: 'font-regular';
 }
 
 .text-bold {
-	font-family: 'roboto-bold' !important;
+	font-family: 'font-bold' !important;
 }
 
 .text-italic {
-	font-family: 'roboto-italic' !important;
+	font-family: 'font-italic' !important;
+}
+
+.text-main {
+	color: var(--color-main) !important;
+}
+
+.text-sub {
+	color: var(--color-sub) !important;
+}
+
+.flex-basis-40 {
+	flex-basis: 40% !important;
+}
+
+.bg-main {
+	background-color: var(--color-main) !important;
+}
+
+.bg-sub {
+	background-color: var(--color-sub) !important;
 }
 
 .navbar-collapse .nav-link {
-	font-family: 'roboto-bold';
+	font-family: 'font-bold';
 	color: #000;
 }
 
 .regis-btn {
-	background-color: var(--main-color-1);
 	color: #FFF;
 	border-radius: 20px;
-}
-
-.regis-btn:hover {
-	background-color: var(--main-color-1) !important;
 }
 
 .btn:hover {
@@ -60,39 +69,13 @@ body {
 	padding-top: 82px;
 }
 
-.section-1 h5 {
-	color: var(--main-color-0) !important;
-}
-
-.section-1 iframe, .section-1 ul {
-	flex-basis: 35%;
-}
-
 .section-1 iframe {
 	height: 20vw;
-}
-
-.section-1 ul {
-  list-style: none;
-  color: #555555;
-}
-
-.section-1 ul li::before {
-  content: "\2022";
-  color: var(--main-color-0);
-  font-weight: bold;
-  display: inline-block; 
-  width: 1em;
-  margin-left: -1em;
 }
 
 @media (max-width: 1050px) {
 	.section-1 .justify-content-center {
 		flex-direction: column;
-	}
-
-	.section-1 ul {
-		padding-top: 20px;
 	}
 }
 
@@ -105,19 +88,15 @@ body {
 	.section-2 .sec-2 {
 		flex-direction: column-reverse;
 	}
+}
 
-	.section-2 .who-banner {
-		margin: 0 !important;
+@media (max-width: 414px) {
+	.section-2 .box {
+		flex-direction: column !important;
+		text-align: center;
+		justify-content: center;
 	}
 }
-
-.section-3 {
-	background-color: var(--main-color-1);
-}
-
-.section-3 h4 {
-	color: var(--main-color-0);
-} 
 
 .section-3 .box {
 	flex-basis: 16%;
@@ -130,19 +109,14 @@ body {
 	height: 90px;
 	width: 90px;
 	border-radius: 50%;
-	/* background-color: var(--main-color-1); */
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	border: 2px solid var(--main-color-0);
+	border: 2px solid var(--color-sub);
 }
 
 .section-3 .box img {
 	height: 60%;
-}
-
-.section-3 .box span {
-	color: var(--main-color-0);
 }
 
 .section-3 .box small {
@@ -155,175 +129,51 @@ body {
 	}
 }
 
-.section-4 .section-container {
-	background-color: var(--main-color-0);
-}
-
-.section-4  h5 {
-	flex-basis: 40%;
-}
-
-.section-4 button {
-	color: #fff;
-	height: 45px;
-	color: var(--main-color-0);
-}
-
-.section-4 button:hover {
-	color: #000 !important;
-}
-
-.section-4 .collapse {
-	background-color: #EBEBEB;
-}
-
-.section-4 img {
-	max-width: 100%;
-}
-
-.section-4 table {
-	max-width: 80%;
-}
-
-.section-4 table .text-focused {
-	color: #0a629d;
-	font-family: roboto-bold;
-}
-
 @media(max-width: 768px) {
-	.section-4 .section-container {
-		flex-direction: column !important;
-		text-align: center;
-	}
-
-	.section-4 .section-container button {
-		margin: 10px 0px !important;
+	.section-4 .wrapper {
+		flex-direction: column-reverse;
 	}
 }
 
+@media(max-width: 767px) {
+	.section-5 .box:nth-child(2n) {
+		justify-content: flex-end !important;
+	}
 
-.section-5 h4 {
-	color: var(--main-color-0);
+	.section-5 .box:nth-child(2n+1) {
+		justify-content: flex-start !important;
+	}
 }
 
-.section-5 button {
+.section-6 button {
 	border-radius: 40px !important;
-	background-color: var(--main-color-1);
-}
-
-.section-5 .box p {
-	color: var(--main-color-0);
 }
 
 @media (max-width: 1024px) {
-	.section-5 .box {
+	.section-6 .box {
 		margin-left: 3.5rem !important;
 		margin-right: 3.5rem !important;
 	}
 }
 
 @media (max-width: 768px) {
-	.section-5 .box {
+	.section-6 .box {
 		margin-left: 2.5rem !important;
 		margin-right: 2.5rem !important;
 	}
+
+	.section-6 h4 {
+		width: 100% !important;
+	}
 }
 
-.detail-layer {
-	transition: 0.5s;
-	top: 0px;
-	width: 100%;
-	height: 100%;
-	background-color: var(--main-color-1);
-	z-index: 10;
-	opacity: 0;
-	position: absolute;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
-
-.detail-layer:hover {
-	transition: 0.8s;
-	opacity: 0.9
-}
-
-.section-5 .box h6 {
-	color: var(--main-color-1);
-}
-
-.section-5 .box small {
+.section-6 .box small {
 	font-size: 14px;
 }
 
-.section-6 {
-	background-color: #F6F6F6;
-}
-
-.section-6 h4 {
-	color: var(--main-color-0);
-}
-
-.section-6 .left-boxes .card {
-	border-radius: 0px !important;
-	flex-basis: 28%;
-}
-
-.section-6 .left-boxes .card-header  {
-	border-radius: 0px !important;
-	background-color: var(--main-color-0);
-	padding-left: 100px;
-}
-
-.section-6 .left-boxes .card-header .img-container {
-	border-radius: 50%;
-	width: 80px;
-	height: 80px;
-	top: -18px;
-	left: 10px;
-	background-color: #FFF;
-	border: 2px solid var(--main-color-0);
-	overflow: hidden;
-	z-index: 20;
-}
-
-.section-6 .left-boxes .card-header .img-container img {
-	object-fit: cover;
-}
-
-.section-6 .left-boxes .card-body h6 {
-	color: var(--main-color-0);
-}
-
-.section-6 .left-boxes .card-body ul li {
-	list-style: none;
-	font-size: 14px !important;
-}
-
-.section-6 .left-boxes .card-body ul li::before {
-	content: "\25B8";
-	margin-right: 7px;
-}
-
-.section-6 .detail-layer:hover {
-	opacity: 1;
-}
-
-@media (max-width: 1300px) {
-	.section-6 .left-boxes .card {
-		flex-basis: 45%;
-	}
-}
-
-@media (max-width: 767px) {
-	.section-6 .left-boxes {
-		flex-basis: 100%;
-		justify-content: center !important;
-	}
-
-	.section-6 .left-boxes .card {
-		flex-basis: 100%;
-	}
+.section-7 {
+	background: url('../img/bg_58-min.png') no-repeat center center fixed;
+	background-size: cover;
 }
 
 .section-7 .box {
@@ -332,10 +182,6 @@ body {
 
 .section-7 .box p {
 	color: #1F1F1F;
-}
-
-.section-7 .box a {
-	color: var(--main-color-1);
 }
 
 @media (max-width: 1180px) {
@@ -354,11 +200,7 @@ body {
 	.section-7 iframe {
 		display: none;
 	}
-}
-
-.section-8 h4 {
-	color: var(--main-color-0);
-}
+}	
 
 .section-8 .box {
 	flex-basis: 23%;
@@ -366,15 +208,10 @@ body {
 
 .section-8 button {
 	border-radius: 40px !important;
-	background-color: var(--main-color-1);
 }
 
 .section-9 {
 	background-image: url('../img/bg_2-min.png');
-}
-
-.section-9 h4 {
-	color: var(--main-color-0);
 }
 
 .section-9 .card {
@@ -383,7 +220,7 @@ body {
 }
 
 .section-9 .card label {
-	color: var(--main-color-0);
+	color: var(--color-sub);
 }
 
 .section-9 .card .avt {
@@ -423,16 +260,21 @@ body {
 	width: 15px !important;
 	height: 15px !important;
 	border-radius: 50%;
-	background-color: var(--main-color-0);
+	background-color: var(--color-sub);
 }
 
 .carousel-control-icon {
-	background-color: var(--main-color-0);
+	background-color: var(--color-sub);
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	padding: 7px;
 	border-radius: 50%;
+}
+
+.section-10 {
+	background: url('../img/sec-11bg-min.png') center fixed no-repeat;
+	background-size: cover;
 }
 
 .section-10 .img-container {
@@ -463,7 +305,7 @@ body {
 }
 
 .section-10 .card a {
-	color: var(--main-color-0);
+	color: var(--color-sub);
 }
 
 .section-10 .hidden-title {
@@ -498,7 +340,7 @@ body {
 
 .section-11 {
 	background-image: url(../img/bgg-min.png);
-	background-color: var(--main-color-1);
+	background-color: var(--color-sub);
 }
 
 .section-11 .box:first-child {
@@ -520,12 +362,12 @@ body {
 }
 
 .section-11 form button {
-	background-color: var(--main-color-0);
+	background-color: var(--color-main);
 	border-radius: 25px;
 }
 
 .section-11 .countdown-box {
-	background-color: var(--main-color-0);
+	background-color: var(--color-main);
 	flex-basis: 10%;
 }
 
@@ -567,8 +409,47 @@ body {
 	}
 }
 
-.section-12 h4 {
-	color: var(--main-color-0);
+.section-11 {
+	background-color: var(--color-main);
+}
+
+.section-11 h5 {
+	line-height: 30px;
+}
+
+.section-11 .box {
+	max-width: 100%;
+}
+
+.section-11 .btn {
+	border-radius: 25px !important;
+}
+
+.section-11 .countdown-box {
+	background-color: var(--color-sub);
+	flex-basis: 17%;
+}
+
+.form-control {
+	border: none !important;
+}
+
+@media (max-width: 1150px) {
+	.section-11 .box {
+		flex-basis: 100% !important;
+	}
+}
+
+@media (max-width: 767px) {
+	.section-11 .countdown-box {
+		flex-basis: 20%;
+	}
+}
+
+@media(max-width: 375px) {
+	.section-11 .countdown-box {
+		flex-basis: 45% !important;
+	}
 }
 
 .section-12 .fb-comments iframe {
